fix overlapping navbar

--- a/src/app/components/bottom-navbar/bottom-navbar.component.css
+++ b/src/app/components/bottom-navbar/bottom-navbar.component.css
@@ -1,7 +1,6 @@
 .mat-toolbar-bottom {
-  position: fixed;
+  position: sticky;
   bottom: 0;
-  width: 100%;
   z-index: 1000;
   display: flex;
   justify-content: space-around;
