--- a/src/app/components/profile/profile/profile.component.css
+++ b/src/app/components/profile/profile/profile.component.css
@@ -2,8 +2,8 @@
   font-family: 'Arial', sans-serif;
   border-radius: 20px;
   max-width: 400px;
-  margin: auto;
   padding: 20px;
+  margin-bottom: 100px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
